# trip-planner

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  test_mcp.py
backend/app/agents/: trip_planner_agent.py
backend/app/models/: schemas.py
backend/app/services/: llm_service.py
backend/framework/: README.md  __init__.py  agent.py  llm.py  tools.py
backend/framework/context/: __init__.py  config.py  manager.py  tokenizer.py
backend/framework/memory/: __init__.py  base.py  conversation.py  factory.py  message.py
backend/framework/prompt/: __init__.py  templates.py
backend/framework/skill/: USAGE.md  __init__.py  base.py  loader.py  registry.py
backend/tests/: test_main.py
skills/clothing/: skill.md  skill.py
skills/software-resource-optimization/: skill.md
skills/travel-planning/: skill.md
